Detect new brands: Suzuki, Nabi, Gresso, G-Touch, FaRao Pro, StrawBerry, Smartab, Subor, SuperTab, Pendoo, Engel and Detect devices for existing brands: Sugar, TrekStor, Ghia, Lenovo, Freetel, Lark, Zidoo, Sony, Siragon, SPC, Karbonn, Bitel, Cloudfone, Navon, Ritmix, Starlight, Zuum, Blu, Dune HD, Philco (#6700)
* feat(device) detect new brand Smartab model: ST1009
feat(device) detect new brand Subor models: S5, 2019, K10 Plus
feat(device) detect new brand SuperTab models: K7, A10, S7G
feat(device) detect new brand Suzuki models: SumoPad 8100, ECOPad 7, SumoPad 10
feat(device) detect brand Sugar model: F7, C9, C7
feat(device) detect brand TrekStor model: SurfTab Theatre 13.4" (ST13416-1)

* feat(device) detect brand Ghia model: Vector 10.1"

* feat(device) detect brand Lenovo model: Vibe P1 Turbo

* feat(device) detect brand Freetel model: Priori 5 (FTJ17C00)

* feat(device) detect brand Freetel model: Cricket Wave (FTU18A00)

* feat(device) detect brand Freetel model: XM (FT142D)

* feat(device) detect brand Lark model: FreeBird 5 WiFi

* feat(device) detect new brand FaRao Pro model: FTRW100

* feat(device) detect brand Zidoo model: Z9S

* feat(device) detect new brand Nabi models: Dream Tab HD 8.0" (DMTAB-NV08B, DMTAB-IN08A), Big Tab HD 20.0" (DMTAB-NV20A),
 Big Tab HD 24.0" (DMTAB-NV24A), Barbie Tab 7.0" (NBTY07SMKG), Fisher Price Learning Tab 7.0" (NBFP07PMKG),
 2S Tab (SNB02-NV7A), 2 Tab (NABI2-NV7A)

* feat(device) detect brand Sony models: Xperia Z1 (SOL23)

* feat(device) detect brand Siragon model: SP-5050

* feat(device) detect brand SPC models: Alien Stick, Alien, Glow 9.7"

* feat(device) detect brand Karbonn model: Titanium Moghul

* feat(device) detect new brand StrawBerry models: QX15, SX

* feat(device) detect brand Bitel models: S8402, S8402L, S8501, S8501L

* feat(device) detect brand Cloudfone model: NBA Edition

* feat(device) detect brand Navon models: Mizu M505 LTE, Mizu F552, Mizu D504

* feat(device

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2645,10 +2645,10 @@ BGH:
 
 # Bitel
 Bitel:
-  regex: 'Bitel[ _-]([^/;]+) Build|B(840[5789]|841[0456]|850[2346]|860[146]|9401|950[12345])'
+  regex: 'Bitel[ _-]([^/;]+) Build|(?:B(?:840[5-9]|841[0456]|850[2346]|860[146]|9401|950[1-5])|S8402L?|S8501L?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: '(B(840[5789]|841[0456]|850[2346]|860[146]|9401|950[12345]))'
+    - regex: '(B(?:840[5789]|841[0456]|850[2346]|860[146]|9401|950[12345])|S8402L?|S8501L?)'
       model: '$1'
     - regex: 'Bitel[ _-]([^/;]+) Build'
       model: '$1'
@@ -2751,7 +2751,7 @@ Blu:
     - regex: 'DASH (L[45] LTE|5.0|L[45]X|L3|X2|[LMX])(?:[);/ ]|$)'
       model: 'Dash $1'
 
-    - regex: 'DASH[ _]([^/;]+) Build'
+    - regex: 'DASH[ _]([^)/;]+)(?: Build|\))'
       model: 'Dash $1'
 
     - regex: 'blu[ _]([^/;]+)( Build|[);])'
@@ -4539,15 +4539,15 @@ Digicel:
     - regex: 'DIGICEL ([^/;]+) Build'
       model: '$1'
 
-# Digiland
+# Digiland or DigiLand
 Digiland:
-  regex: '(?:DL1008M|DL1023)(?:[);/ ]|$)'
+  regex: '(?:DL1008M|DL(?:1023|9002|[78]006))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'DL1008M'
       model: 'DL1008M'
-    - regex: 'DL1023'
-      model: 'DL1023'
+    - regex: 'DL(1023|9002|[78]006)'
+      model: 'DL$1'
 
 # Digma
 Digma:
@@ -4753,9 +4753,11 @@ Doro:
 
 # Dune HD
 'Dune HD':
-  regex: 'DuneHD'
+  regex: 'DuneHD|SOLO 4K(?:[);/ ]|$)'
   device: 'tv'
   models:
+    - regex: 'SOLO 4K(?:[);/ ]|$)'
+      model: 'Solo 4k'
     - regex: 'DuneHD/\d.\d \([a-z]+__([a-z0-9_-]+);'
       model: '$1'
     - regex: 'DuneHD/\d.\d \(([a-z0-9_-]+);'
@@ -5003,7 +5005,7 @@ Senseit:
 
 # Sony & Sony Ericsson (combined as they are mixed up)
 Sony:
-  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|(?:[4-9]0[12])SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOG01|SOL2[246]|SOV3[1-9]|SOV4[0-3]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1-5]G|[1-4]H|[1-4]J|[1-5]K|1M|[1-3]L)|R800[aix]|J3173|J82[17]0|J9110|J92[16]0|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|G2299|LiveWithWalkman|BRAVIA|SGP771|E3 Dual|A001SO|I4193|E6508|SOT31|SO-[45]1A|SO-52A|XQ-A[DT]51|XQ-A[TU]42|XQ-AS72|XQ-A[TSU]52|SOL25|SOG02|A002SO|NW-A100Series|J3273'
+  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|(?:[4-9]0[12])SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOG01|SOL2[2346]|SOV3[1-9]|SOV4[0-3]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1-5]G|[1-4]H|[1-4]J|[1-5]K|1M|[1-3]L)|R800[aix]|J3173|J82[17]0|J9110|J92[16]0|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|G2299|LiveWithWalkman|BRAVIA|SGP771|E3 Dual|A001SO|I4193|E6508|SOT31|SO-[45]1A|SO-52A|XQ-A[DT]51|XQ-A[TU]42|XQ-AS72|XQ-A[TSU]52|SOL25|SOG02|A002SO|NW-(A100|Z1000)Series|J3273'
   device: 'smartphone'
   models:
     # SONY ERICSSON: explicit smartphone models
@@ -5286,7 +5288,7 @@ Sony:
       device: 'phablet'
     - regex: '(?:Sony(?:Ericsson)?)?D5503|Xperia Z1 Compact'
       model: 'Xperia Z1 Compact'
-    - regex: '(?:Sony(?:Ericsson)?)?(?:C69(?:0[236]|16|43)|L39H|SO-0[12]F)|Xperia Z1(?:[);/ ]|$)'
+    - regex: '(?:Sony(?:Ericsson)?)?(?:C69(?:0[236]|16|43)|SOL23|L39H|SO-0[12]F)|Xperia Z1(?:[);/ ]|$)'
       model: 'Xperia Z1'
     - regex: '(?:Sony(?:Ericsson)?)?(?:D58[03]3|SO-02G)|Xperia Z3 Compact(?:[);/ ]|$)'
       model: 'Xperia Z3 Compact'
@@ -5418,6 +5420,9 @@ Sony:
 
     - regex: 'NW-A100Series'
       model: 'Walkman A100'
+      device: 'portable media player'
+    - regex: 'NW-Z1000Series'
+      model: 'Walkman Z1000'
       device: 'portable media player'
 
     # general detections
@@ -5976,7 +5981,7 @@ Geotel:
 
 # Ghia
 Ghia:
-  regex: 'GHIA|QS702'
+  regex: 'GHIA|QS702|VECTOR10\.1'
   device: 'smartphone'
   models:
     - regex: 'QS702'
@@ -5985,6 +5990,9 @@ Ghia:
       model: 'Zeus 3G'
     - regex: 'GHIA_AXIS7'
       model: 'Axis 7'
+      device: 'tablet'
+    - regex: 'VECTOR10\.1'
+      model: 'Vector 10.1"'
       device: 'tablet'
 
 # Gigabyte
@@ -8269,7 +8277,7 @@ Diva:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-[0-9]{4}|(?:QC6035|NP501KC|302KC|503KC|602KC|705KC|901KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[13-9]|KYT3[123]|KYF3[123579]|KYX31|KYY2[1-4]|S2151|KC-S701|S[468]-KC|KYV40U?|KYV4[1-8]|KYV4[47]|KC-S301AE|X3-KC|E6560[CT]|E6782[L]?|E6790(?:TM)?|[47]04KC|A001KC|WX10K)(?:[-_]u2?)?(?:[);/ ]|$)'
+  regex: 'Kyocera|KWC-|QC-[0-9]{4}|(?:QC6035|NP501KC|302KC|503KC|602KC|705KC|901KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[13-9]|KYT3[123]|KYF3[123579]|KYX31|KYY2[1-4]|S2151|KC-S701|S[468]-KC|KYV40U?|KYV4[1-8]|KYV4[47]|KC-S301AE|X3-KC|E6560[CT]|E6782[L]?|E6790(?:TM)?|[47]04KC|A001KC|WX10K|URBANO PROGRESSO)(?:[-_]u2?)?(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -8400,6 +8408,8 @@ Kyocera:
       model: '$1'
     - regex: 'A001KC(?:[);/ ]|$)'
       model: 'Katan Sumaho 2'
+    - regex: 'URBANO PROGRESSO(?:[);/ ]|$)'
+      model: 'Urbano Progresso'
 
     # explicit feature phone models
     - regex: 'S2151'
@@ -8581,7 +8591,7 @@ Lanix:
 
 # Lark
 Lark:
-  regex: '(Lark|Cumulus|Evolution|FreeMe|Ultimate (?:X4|7i))[ _-]|Build/Lark|Bjorn[_ ]SP-500'
+  regex: '(Lark|Cumulus|Evolution|FreeMe|Ultimate (?:X4|7i))[ _-]|Build/Lark|Bjorn[_ ]SP-500|FreeBird 5WiFi'
   device: 'tablet'
   models:
     - regex: 'Cumulus[ _](5\.5|[56])[ _]HD'
@@ -8597,6 +8607,8 @@ Lark:
       model: 'FreeMe X4 7HD'
     - regex: 'FreeMe X4[ _]9'
       model: 'FreeMe X4 9'
+    - regex: 'FreeBird 5WiFi'
+      model: 'FreeBird 5 WiFi'
     - regex: '(?:Lark[ _-])?Evolution[ _](X2 7 3G-GPS|X4[_ ]10\.1|10|X4[_ ]7[ _]IPS)'
       model: 'Evolution $1'
     - regex: 'Ul(?:ti|it)mate (X4 10\.1 3G IPS|X4 8s 3G|7i)'
@@ -8976,6 +8988,8 @@ Lenovo:
       model: 'K6 Power'
     - regex: 'P1ma40(?:[);/ ]|$)'
       model: 'Vibe P1m'
+    - regex: 'Vibe P1 Turbo(?:[);/ ]|$)'
+      model: 'Vibe P1 Turbo'
     - regex: '(?:P1(?:a42|c72)|Vibe P1)(?:[);/ ]|$)'
       model: 'Vibe P1'
     - regex: 'A2016a40(?:[);/ ]|$)'
@@ -9592,7 +9606,7 @@ Konrow:
 
 # Karbonn (karbonnmobiles.com)
 Karbonn:
-  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9[_ ]Viraat[_ ]Plus|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Aura Sleek Plus|Aura Note Play|Titanium[ _](?:3D-Plex|Octane Plus|Vista 4G|Jumbo|S360|S1[059]|S35|S20[13]|S22|S1|S200 HD|Frames S7)|K-lite F3|Sparkle V'
+  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9[_ ]Viraat[_ ]Plus|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Aura Sleek Plus|Aura Note Play|Titanium[ _](?:3D-Plex|Octane Plus|Vista 4G|Jumbo|S360|S1[059]|S35|S20[13]|S22|S1|S200 HD|Frames S7|MOGHUL)|K-lite F3|Sparkle V'
   device: 'smartphone'
   models:
     - regex: 'K9 Kavach 4G'
@@ -9627,6 +9641,8 @@ Karbonn:
       model: 'Titanium Jumbo 2'
     - regex: 'Titanium Jumbo'
       model: 'Titanium Jumbo'
+    - regex: 'Titanium[ _]MOGHUL'
+      model: 'Titanium Moghul'
     - regex: 'Titanium Frames S7'
       model: 'Titanium Frames S7'
     - regex: 'Titanium Octane Plus'
@@ -10694,6 +10710,10 @@ Navon:
   regex: 'Navon[_ ]|(?:Vision_Tab_(?:7|10)|Superme_Max|Predator (?:10|3G)|Platinum[_ ]10[_ ]3G(?:_V2)?|Supreme[_ ](?:Fine(?:[_ ]Micro)?|Chief|Pure|Pro)(?:[_ ](?:Mini|Plus))?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: 'M505 LTE(?:[);/ ]|$)'
+      model: 'Mizu M505 LTE'
+    - regex: '(F552|D504)(?:[);/ ]|$)'
+      model: 'Mizu $1'
     - regex: 'Superme_Max(?:[);/ ]|$)'
       model: 'Supreme Max'
     - regex: 'Supreme_Fine_Mini(?:[);/ ]|$)'
@@ -14651,6 +14671,16 @@ Q-Touch:
   device: 'smartphone'
   model: '$1'
 
+# G-Touch or GTouch
+G-Touch:
+  regex: 'GTouch[_ ]|(?:Stella (?:XS?|Omega))(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Stella (XS?|Omega)'
+      model: 'Stella $1'
+    - regex: 'GTouch[_ ]STELLA'
+      model: 'Stella'
+
 # T-Mobile
 T-Mobile:
   regex: 'T-Mobile[ _][a-z0-9 ]+|REVVLRY|REVVL 2( PLUS)?(?:[);/ ]|$)'
@@ -15061,11 +15091,13 @@ Touchmate:
 
 # TrekStor
 TrekStor:
-  regex: '(?:TrekStor|Surftab) ([^/;]+)(?: Build|\))|Surftab[^;\)]*(?:[;\)]|$)|ST10216-2A|VT10416-[12]|TFMTKAW01232'
+  regex: '(?:TrekStor|Surftab) ([^/;]+)(?: Build|\))|Surftab[^;\)]*(?:[;\)]|$)|ST10216-2A|ST13416-1|VT10416-[12]|TFMTKAW01232'
   device: 'tablet'
   models:
     - regex: 'ST10216-2A|VT10416-[12]'
       model: 'SurfTab 10.1'
+    - regex: 'ST13416-1'
+      model: 'SurfTab Theatre 13.4"'
     - regex: 'PrimeTab P10'
       model: 'PrimeTab P10'
     - regex: 'TrekStor ([^/;]+) Build'
@@ -16937,15 +16969,19 @@ FinePower:
     - regex: 'FinePower[_ ]?([CD][1-9])(?:[);/ ]|$)'
       model: '$1'
 
-# Freetel
+# Freetel (freetel.jp)
 Freetel:
-  regex: '(?:FTJ17A00|FTJ152[ABCD]|FT141B|FT142D_LTEXM|FT142A?|FTJ161[AB]|FTJ1[56]2E|FTJ162[BD]|FTE161[GE])(?:[);/ ]|$)'
+  regex: '(?:FTJ17[AC]00|FTJ152[ABCD]|FTU18A00|FT141B|FT142D(?:_LTEXM)?|FT142A?|FTJ161[AB]|FTJ1[56]2E|FTJ162[BD]|FTE161[GE])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'FTJ152C'
       model: 'Samurai Miyabi'
     - regex: 'FTJ17A00(?:[);/ ]|$)'
       model: 'Rei 2 Dual'
+    - regex: 'FTJ17C00(?:[);/ ]|$)'
+      model: 'Priori 5'
+    - regex: 'FTU18A00(?:[);/ ]|$)'
+      model: 'Cricket Wave'
     - regex: 'FTJ161A'
       model: 'Musashi'
     - regex: 'FTE161E'
@@ -16956,7 +16992,7 @@ Freetel:
       model: 'Raijin'
     - regex: 'FT141B'
       model: 'Nico'
-    - regex: 'FT142D_LTEXM'
+    - regex: 'FT142D(?:_LTEXM)?(?:[);/ ]|$)'
       model: 'XM'
     - regex: 'FT142A?'
       model: 'Priori 2'
@@ -17474,7 +17510,7 @@ ZTE:
       model: '$1'
 
 Zuum:
-  regex: 'Zuum[ _-]|(?:Akus Z|COVET|MAGNO|ONIX S|STEDI|STELLAR Z|GRAVITY Z|AURA X|COVET_PRO_LITE)(?:[);/ ]|$)'
+  regex: 'Zuum[ _-]|(?:Akus Z|COVET|MAGNO|ONIX S|STEDI|STELLAR(?:[ _](?:Z|PRO|[MP]1))?|GRAVITY Z|AURA X|COVET_PRO_LITE)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Akus Z'
@@ -17493,8 +17529,18 @@ Zuum:
       model: 'Onix S'
     - regex: 'STEDI'
       model: 'Stedi'
-    - regex: 'STELLAR Z'
-      model: 'Stellar Z'
+    - regex: 'STELLAR PRO'
+      model: 'Stellar Pro'
+    - regex: 'STELLAR PLUS'
+      model: 'Stellar Plus'
+    - regex: 'STELLAR ([MP]1|Z)'
+      model: 'Stellar $1'
+    - regex: 'STELLAR MINI'
+      model: 'Stellar Mini'
+    - regex: 'STELLAR MINI'
+      model: 'Stellar Mini'
+    - regex: 'STELLAR'
+      model: 'Stellar'
     - regex: 'GRAVITY Z'
       model: 'Gravity Z'
     - regex: 'AURA X'
@@ -17706,10 +17752,10 @@ Xiaolajiao:
 
 # Ritmix
 Ritmix:
-  regex: '(RMD[-_](?:10(?:2[689]|30|5[089])|1121|75[01]|726|85[57]|870)|RMP-(?:450|50[56]|530|600))(?:[);/ ]|$)'
+  regex: '(RMD[-_](?:10(?:2[689]|30|5[089])|1121|75[017]|726|85[57]|870)|RMP-(?:450|50[56]|530|600))(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: 'RMD[-_](10(?:2[689]|30|5[089])|1121|75[01]|726|85[57]|870)(?:[);/ ]|$)'
+    - regex: 'RMD[-_](10(?:2[689]|30|5[089])|1121|75[017]|726|85[57]|870)(?:[);/ ]|$)'
       model: 'RMD-$1'
     - regex: 'RMP[-_](450|50[56]|530|600)(?:[);/ ]|$)'
       model: 'RMP-$1'
@@ -18050,9 +18096,13 @@ Nuvo:
 
 # Sunvell
 Sunvell:
-  regex: 'T95ZPLUS(?:[);/ ]|$)'
+  regex: '(?:T95ZPLUS|T95[KU]PRO)(?:[);/ ]|$)'
   device: 'tv'
-  model: 'T95Z Plus'
+  models:
+    - regex: 'T95ZPLUS'
+      model: 'T95Z Plus'
+    - regex: '(T95[KU])PRO'
+      model: '$1 Pro'
 
 # Ugoos
 Ugoos:
@@ -18288,7 +18338,7 @@ Soyes:
 
 # Zidoo
 Zidoo:
-  regex: 'ZIDOO[ _](H6 Pro|X6 Pro|X9S|Z10|X[158]|X20 Pro)(?:[);/ ]|$)'
+  regex: 'ZIDOO[ _](H6 Pro|X6 Pro|X9S|Z10|X[158]|X20 Pro|Z9S)(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
 
@@ -18451,7 +18501,7 @@ Droxio:
 
 # Goophone
 Goophone:
-  regex: '(?:M(G492|L7[JK]2)CH|MN(4A2|8J2)ZP|MGA92ZP|MKU82ZP|MNGW2CH|MNH02CH|MNRM2CH)[/]A(?:[);/ ]|$)'
+  regex: 'Goophone[ _]|(?:M(G492|L7[JK]2)CH|MN(4A2|8J2)ZP|MGA92ZP|MKU82ZP|MNGW2CH|MNH02CH|MNRM2CH)[/]A(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:MG492CH|MGA92ZP)[/]A(?:[);/ ]|$)'
@@ -18466,6 +18516,10 @@ Goophone:
       model: 'I7'
     - regex: '(?:MN8J2ZP|MNRM2CH)[/]A(?:[);/ ]|$)'
       model: 'I7 Plus'
+    - regex: 'S4 MEGA(?:[);/ ]|$)'
+      model: 'S4 Mega'
+    - regex: 'Goophone i([69])(?:[);/ ]|$)'
+      model: 'I$1'
 
 # PocketBook
 PocketBook:
@@ -18495,15 +18549,25 @@ Kuliao:
 
 # Sugar
 Sugar:
-  regex: 'SUGAR (?:C[12]1|C1[23]|S11|C11s|[YF]11|[SF]20|S20s|Y12s|[YFS]9|C6|[FY]7|Y8|Y1[256]|P1)(?:[);/ ]|$)'
+  regex: 'SUGAR[ _]'
   device: 'smartphone'
   models:
     - regex: 'SUGAR Y([78]) MAX(?:[);/ ]|$)'
       model: 'Y$1 Max'
     - regex: 'SUGAR F7 Mini(?:[);/ ]|$)'
       model: 'F7 Mini'
-    - regex: 'SUGAR (C[12]1|C1[23]|S11|C11s|[SF]20s?|[YF]11|[YFS]9|C6|Y7|Y12s|Y1[256]|P1)(?:[);/ ]|$)'
+    - regex: 'SUGAR (C[12]1|C1[23]|S11|C11s|[SF]20s?|[YF]11|[YFS]9|C[679]|[FY]7|Y12s|Y1[256]|P1)(?:[);/ ]|$)'
       model: '$1'
+
+# Subor
+Subor:
+  regex: 'SUBOR[ _]'
+  device: 'smartphone'
+  models:
+    - regex: 'SUBOR[ _](S5|2019)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'SUBOR[_ ]K10PLUS(?:[);/ ]|$)'
+      model: 'K10 Plus'
 
 # Xshitou
 Xshitou:
@@ -18784,7 +18848,7 @@ Maxtron:
 
 # Philco (philco.com.br)
 Philco:
-  regex: '(PCS01|PH350B|PTB7R)(?:[);/ ]|$)'
+  regex: 'PHILCO |(PCS01|PH350B|PTB7R)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(PCS01|PH350B)(?:[);/ ]|$)'
@@ -18792,6 +18856,9 @@ Philco:
     - regex: '(PTB7R)(?:[);/ ]|$)'
       device: 'tablet'
       model: '$1'
+    - regex: 'PHILCO Android TV(?:[);/ ]|$)'
+      device: 'tv'
+      model: ''
 
 # SEMP TCL
 SEMP TCL:
@@ -19276,7 +19343,7 @@ Cloudpad:
 
 # Cloudfone
 Cloudfone:
-  regex: '(?:Thrill (?:Boost[ ]?(2|3)?|Snap|Access)|Excite Prime 2 Pro)(?:[);/ ]|$)'
+  regex: '(?:Thrill (?:Boost[ ]?(2|3)?|Snap|Access)|Excite Prime 2 Pro|NBA Edition)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Thrill Boost (2|3)(?:[);/ ]|$)'
@@ -19289,6 +19356,8 @@ Cloudfone:
       model: 'Thrill Access'
     - regex: 'Excite Prime 2 Pro(?:[);/ ]|$)'
       model: 'Excite Prime 2 Pro'
+    - regex: 'NBA Edition(?:[);/ ]|$)'
+      model: 'NBA Edition'
 
 # Vsmart
 Vsmart:
@@ -19771,7 +19840,7 @@ Selenga:
 
 # Starlight
 Starlight:
-  regex: '(?:My_Star_X|RIO STAR|C_Note_Pro)(?:[);/ ]|$)'
+  regex: '(?:My_Star_X|RIO STAR|C_Note_Pro|Star_Mix_2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'My_Star_X'
@@ -19780,6 +19849,8 @@ Starlight:
       model: 'Rio Star'
     - regex: 'C_Note_Pro'
       model: 'C Note Pro'
+    - regex: 'Star_Mix_2'
+      model: 'Star Mix 2'
 
 # GEOFOX
 GEOFOX:
@@ -20081,16 +20152,26 @@ Spark:
 
 # SPC or SPC Universe or SPC Mobile (spc.es)
 SPC:
-  regex: '(?:Gravity Max|GRAVITY_OCTACORE|SPC SMART LITE)(?:[);/ ]|$)'
+  regex: '(?:Gravity Max|GRAVITY_OCTACORE|SPC SMART LITE|SPC_ALIEN(?:_STICK)?|SPC Glow9.7)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'GRAVITY_OCTACORE'
       model: 'Gravity OctaCore'
     - regex: 'Gravity Max'
       model: 'Gravity Max'
+    - regex: 'SPC Glow9.7'
+      model: 'Glow 9.7"'
+
     - regex: 'SPC SMART LITE'
       device: 'smartphone'
       model: 'Smart Lite'
+
+    - regex: 'SPC_ALIEN_STICK'
+      device: 'tv'
+      model: 'Alien Stick'
+    - regex: 'SPC_ALIEN'
+      device: 'tv'
+      model: 'Alien'
 
 # Winmax (winmaxmobile.com)
 Winmax:
@@ -20222,7 +20303,7 @@ Bluewave:
 
 # Siragon (siragon.com)
 Siragon:
-  regex: '(SP-(?:5250|5400))(?:[);/ ]|$)'
+  regex: '(SP-(?:5250|5400|5050))(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
@@ -20976,6 +21057,28 @@ Linnex:
   device: 'smartphone'
   model: 'Li $1'
 
+# Smartab
+Smartab:
+  regex: '(ST1009)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
+
+# SuperTab (supertab-dz.com)
+SuperTab:
+  regex: 'SuperTab(A10|K7|S7G)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
+
+# Suzuki (suzukitech.com)
+Suzuki:
+  regex: 'SUZUKI[ _]|(?:ECOPAD7|SUMOPad10)(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: 'SUMOPAD(8100|10)(?:[);/ ]|$)'
+      model: 'SumoPad $1'
+    - regex: 'ECOPAD7'
+      model: 'ECOPad 7'
+
 # philips
 Philips:
   regex: 'Philips|AND1E(?:[);/ ]|$)|NETTV/|PI3210G|TLE(821L|722G)|TPM1[79]1E|70PUH6774_96|QM16[134]E|Xenium S[25]66|S397|W5510'
@@ -21019,6 +21122,81 @@ Philips:
       model: 'Fisio $1'
     - regex: 'Philips[ _-]?([a-z0-9\-@]+)'
       model: '$1'
+
+# FaRao Pro (www.faraopro.jp)
+FaRao Pro:
+  regex: '(FTRW100)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
+
+# Nabi
+Nabi:
+  regex: '(?:DMTAB-(?:IN08A|NV08B|NV2[04]A)|NBTY07SMKG|NBFP07PMKG|SNB02-NV7A|NABI2-NV7A)(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: 'DMTAB-(?:IN08A|NV08B)'
+      model: 'Dream Tab HD 8.0"'
+    - regex: 'DMTAB-NV(2[04])A'
+      model: 'Big Tab HD $1.0"'
+    - regex: 'NBTY07SMKG'
+      model: 'Barbie Tab 7.0"'
+    - regex: 'NBFP07PMKG'
+      model: 'Fisher Price Learning Tab 7.0"'
+    - regex: 'SNB02-NV7A'
+      model: '2S Tab'
+    - regex: 'NABI2-NV7A'
+      model: '2 Tab'
+
+# StrawBerry
+StrawBerry:
+  regex: 'StrawBerry[ _]'
+  device: 'smartphone'
+  models:
+    - regex: 'StrawBerry[ _](SX|QX15)(?:[);/ ]|$)'
+      model: '$1'
+
+# Gresso
+Gresso:
+  regex: 'Gresso[ _]'
+  device: 'smartphone'
+  models:
+    - regex: 'Gresso[ _]Regal(?:[);/ ]|$)'
+      model: 'Regal'
+
+# Pendoo  (pendoo.tv)
+Pendoo:
+  regex: 'Pendoo|A5X MAX(?:[\.-]\w+)?\.01\.d4'
+  device: 'tv'
+  models:
+    - regex: 'Pendoo ?(T95Z|X10) PLUS'
+      model: '$1 Plus'
+    - regex: 'Pendoo ?X8PRO+'
+      model: 'X8 Pro+'
+    - regex: 'Pendoo[ \.]?(X9[29])'
+      model: '$1'
+    - regex: 'pendoo mini'
+      model: 'Mini'
+    - regex: 'A5X MAX(?:[\.-]\w+)?\.01\.d4'
+      model: 'A5X Max'
+
+# PiPO (pipo.com)
+PiPO:
+  regex: 'Pipo[_ ]|PipoM9Pro'
+  device: 'tablet'
+  models:
+    - regex: 'Pipo[_ ]([TP]9)'
+      model: '$1'
+    - regex: 'PipoM9Pro'
+      model: 'M9 Pro'
+    - regex: 'PIPO[_ ](X10|X9S)'  # combo device tv/tablet/pc
+      device: 'tv'
+      model: '$1'
+
+# Engel or Engel Axil (www.engelaxil.com)
+Engel:
+  regex: '(EN1007Q)plus(?:[);/ ]|$)'
+  device: 'tv'
+  model: '$1 Plus'
 
 # INCAR
 INCAR:
