feat(device) detect new brand Aspera models: R5h, RT3, A40, A42, A50, Wren feat(device) detect brand Maxwest model: Nitro 4s feat(device) detect brand STF Mobile model: Slay II feat(device) detect brand Karbonn model: Titanium S5 feat(device) detect brand Evercoss model: A5Z
issue #5702

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4943,7 +4943,7 @@ Evercoss:
       model: 'U50A Plus'
     - regex: 'M50 STAR(?:[);/ ]|$)'
       model: 'M50 Star'
-    - regex: 'EVERCOSS[ _](A7[BRLZ]|A65|A74A)(?:[);/ ]|$)'
+    - regex: 'EVERCOSS[ _](A7[BRLZ]|A65|A74A|A5Z)(?:[);/ ]|$)'
       model: '$1'
 
 # Eurostar
@@ -9626,7 +9626,7 @@ Konrow:
 
 # Karbonn (karbonnmobiles.com)
 Karbonn:
-  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9[_ ]Viraat[_ ]Plus|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Aura Sleek Plus|Aura Note Play|Titanium[ _](?:3D-Plex|Octane Plus|Vista 4G|Jumbo|S360|S1[059]|S35|S20[13]|S22|S1|S200 HD|Frames S7|MOGHUL)|K-lite F3|Sparkle V'
+  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9[_ ]Viraat[_ ]Plus|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Aura Sleek Plus|Aura Note Play|Titanium[ _](?:3D-Plex|Octane Plus|Vista 4G|Jumbo|S360|S1[059]|S35|S20[13]|S22|S[15]|S200 HD|Frames S7|MOGHUL)|K-lite F3|Sparkle V'
   device: 'smartphone'
   models:
     - regex: 'K9 Kavach 4G'
@@ -9653,7 +9653,7 @@ Karbonn:
       model: 'K9 Viraat 4G'
     - regex: 'Titanium[ _]S2[ _]Plus'
       model: 'Titanium S2 Plus'
-    - regex: 'Titanium[_ ]S(99|360|1[059]|109|35|200 HD|20[13]|22|1)(?:[);/ ]|$)'
+    - regex: 'Titanium[_ ]S(99|360|1[059]|109|35|200 HD|20[13]|22|[15])(?:[);/ ]|$)'
       model: 'Titanium S$1'
     - regex: 'Titanium Vista 4G'
       model: 'Titanium Vista 4G'
@@ -9786,7 +9786,7 @@ Masstel:
 
 # Maxwest
 Maxwest:
-  regex: '(?:Astro_5N_LTE|Virtue Z5|Astro X55s|Astro_5_GO_LTE|Nitro[_ ](?:4|55R|5[XR]|[45] GO|4s LTE)|Gravity_55?_GO|Nitro_Phablet_9s)(?:[);/ ]|$)'
+  regex: '(?:Astro_5N_LTE|Virtue Z5|Astro X55s|Astro_5_GO_LTE|Nitro[_ ](?:4S?|55R|5[XR]|[45] GO|4s LTE)|Gravity_55?_GO|Nitro_Phablet_9s)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Astro_5N_LTE'
@@ -9801,6 +9801,8 @@ Maxwest:
       model: 'Nitro $1 GO'
     - regex: 'Nitro 4s LTE'
       model: 'Nitro 4s LTE'
+    - regex: 'Nitro[ _]4s'
+      model: 'Nitro 4s'
     - regex: 'Nitro_(4|55R|5[XR])'
       model: 'Nitro $1'
     - regex: 'Gravity_(55?)_GO'
@@ -13734,7 +13736,7 @@ Smartisan:
 
 # STF Mobile
 STF Mobile:
-  regex: '(?:Fractal|AERIAL PLUS|Origins Pro|BLOCK_MINI|BLOCK GO|BLOCK 3)(?:[);/ ]|$)'
+  regex: '(?:Fractal|AERIAL PLUS|Origins Pro|BLOCK_MINI|BLOCK GO|BLOCK 3|SLAY II)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Fractal'
@@ -13751,6 +13753,8 @@ STF Mobile:
       model: 'Block 3'
     - regex: 'BLOCK GO'
       model: 'Block Go'
+    - regex: 'SLAY II'
+      model: 'Slay II'
 
 # STK
 STK:
@@ -21374,3 +21378,13 @@ OASYS:
   regex: '(TEG9300)(?:[);/ ]|$)'
   device: 'peripheral'
   model: '$1'
+
+# Aspera (asperamobile.com)
+Aspera:
+  regex: 'ASPERA|(?:Wren)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'ASPERA[ _](R5h|RT3|A4[02]|A50)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'Wren(?:[);/ ]|$)'
+      model: 'Wren'
