feat(app) detect apps: ChMate, 2tch, Ciisaa, BB2C, twinkle, JaneStyle
issue #5885

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -507,3 +507,33 @@
 - regex: '^TVirl/(\d+[\.\d]+)'
   name: 'TVirl'
   version: '$1'
+
+# ChMate https://play.google.com/store/apps/details?id=jp.co.airfront.android.a2chMate
+- regex: '2?chMate/(\d+[\.\d]+)'
+  name: 'ChMate'
+  version: '$1'
+
+# 2tch https://apps.apple.com/jp/app/2tch/id305982914
+- regex: '2tch/(\d+[\.\d]+)'
+  name: '2tch'
+  version: '$1'
+
+# Ciisaa https://play.google.com/store/apps/details?id=com.gmail.aosoan.ciisaa
+- regex: 'Ciisaa/(\d+[\.\d]+)'
+  name: 'Ciisaa'
+  version: '$1'
+
+# BB2C https://itunes.apple.com/us/app/bb2c/id298820042?mt=8
+- regex: 'BB2C (\d+[\.\d]+)'
+  name: 'BB2C'
+  version: '$1'
+
+# twinkle https://itunes.apple.com/app/twinkle/id463142843
+- regex: 'twinkle/(\d+[\.\d]+)'
+  name: 'twinkle'
+  version: '$1'
+
+# JaneStyle https://apps.apple.com/app/id1157926535
+- regex: 'JaneStyle_iOS/(\d+[\.\d]+)'
+  name: 'JaneStyle'
+  version: '$1'
