--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -593,6 +593,13 @@
   name: 'iOS'
   version: '$1'
 
+- regex: 'iOS(\d+\.\d+\.\d{1,2})'
+  name: 'iOS'
+  version: '$1'
+- regex: 'iOS(\d+)\.(\d+)0'
+  name: 'iOS'
+  version: '$1.$2'
+
 - regex: 'iPhone OS ([0-9]{1})([0-9]{1})([0-9]{1})'
   name: 'iOS'
   version: '$1.$2.$3'
@@ -624,6 +631,7 @@
 - regex: 'Sonos/.+\(ICRU_'
   name: 'iOS'
   version: ''
+
 
 ##########
 # Mac
