--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -593,9 +593,10 @@
   name: 'iOS'
   version: '$1'
 
-- regex: 'iOS(\d+\.\d+\.\d{1,2})'
+- regex: 'iOS(\d+\.\d+\.\d+)'
   name: 'iOS'
   version: '$1'
+
 - regex: 'iOS(\d+)\.(\d+)0'
   name: 'iOS'
   version: '$1.$2'
